// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions/auth checkLogin dispatches no actions if not logged in already 1`] = `Array []`;

exports[`actions/auth checkLogin dispatches the login action if already logged in 1`] = `
Array [
  Object {
    "error": false,
    "meta": Object {
      "message": undefined,
    },
    "payload": undefined,
    "type": "@flexget/auth/LOGIN",
  },
]
`;

exports[`actions/auth login dispatches the correct actions on successful login 1`] = `
Array [
  Object {
    "payload": Object {
      "type": "@flexget/auth/LOGIN",
    },
    "type": "LOADING_STATUS",
  },
  Object {
    "error": false,
    "meta": Object {
      "message": undefined,
    },
    "payload": undefined,
    "type": "@flexget/auth/LOGIN",
  },
]
`;

exports[`actions/auth login dispatches the correct actions on unsuccessful login 1`] = `
Array [
  Object {
    "payload": Object {
      "type": "@flexget/auth/LOGIN",
    },
    "type": "LOADING_STATUS",
  },
  Object {
    "error": true,
    "meta": Object {
      "message": undefined,
    },
    "payload": [Error],
    "type": "@flexget/auth/LOGIN",
  },
]
`;

exports[`actions/auth logout dispatches the correct actions on succesful logout 1`] = `
Array [
  Object {
    "payload": Object {
      "type": "@flexget/auth/LOGOUT",
    },
    "type": "LOADING_STATUS",
  },
  Object {
    "error": false,
    "meta": Object {
      "message": undefined,
    },
    "payload": undefined,
    "type": "@flexget/auth/LOGOUT",
  },
]
`;

exports[`actions/auth logout dispatches the correct actions on unsuccesful logout 1`] = `
Array [
  Object {
    "payload": Object {
      "type": "@flexget/auth/LOGOUT",
    },
    "type": "LOADING_STATUS",
  },
  Object {
    "error": true,
    "meta": Object {
      "message": undefined,
    },
    "payload": [Error],
    "type": "@flexget/auth/LOGOUT",
  },
]
`;
